fix: add global scrollbar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,3 +53,31 @@ body {
   white-space: pre-wrap;
 }
 
+*::selection {
+  background: #95a5ac40;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #4b5563 #1f2937;
+}
+
+
+/* Dark scrollbar */
+::-webkit-scrollbar-track {
+  background: #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #404040;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* For Firefox */
+* {
+  scrollbar-color: #404040 #1a1a1a;
+}
